tests/errors/operand_type_53/e1.src
.IPPcode21

DEFVAR GF@var
MOVE GF@var int@1
DEFVAR GF@str
MOVE GF@str string@a

ADD GF@var GF@var GF@str
